fixed bug with overflowing comments

--- a/src/components/Comments/Comment/Comment.module.scss
+++ b/src/components/Comments/Comment/Comment.module.scss
@@ -37,6 +37,8 @@
     line-height: 1.05rem;
     font-size: 1.03rem;
     margin-left: 15px;
+    text-overflow: ellipsis;  
+    overflow: hidden;
   }
 }
 
